* release 0.4.8
	- added detection for DOS version with .ABA files

* release 0.4.7
	- added detection for Macintosh CD version
	- restored some content from MEMO cutscene

* release 0.4.6
	- added rewind to automatic saves
	- fixed passwords and protection codes input

* release 0.4.5
	- added low-pass filtering for in-game music
	- added support for 3DO background music (tunes/*.Cpc)
	- added protection screen for DOS SSI version
	- fixed ASC and CARTE cutscenes enablement
	- fixed loudness of sound effects and in-game music

* release 0.4.4
	- added auto-save
	- fixed graphical glitches with Macintosh data files

* release 0.4.3
	- added title and logo screens for Macintosh
	- fixed cutscene offsets with Macintosh data files

* release 0.4.2
	- added graphic borders (16:9 displays)
	- added detection for Macintosh AppleDouble
	- added language selection in title screen
	- added story texts for Macintosh

* release 0.4.1
	- added support for Macintosh sounds playback
	- improved graphics scalers performance
	- fixed palette glitches with .BNQ DOS data files

* release 0.4.0
	- added initial support for Macintosh data files (512x448 resolution)
	- added configuration file entries for disabled cutscenes
	- fixed screen shaking offset (level 2)

* release 0.3.7
	- added 'caillou-f.set' cutscene
	- added detection for 'fbdemofr.zip' DOS demo data files
	- fixed cutscene text offsets with Japanese language

* release 0.3.6
	- added cutscene music looping
	- added 'DEMO' to title menu
	- fixed potential crash with the 'walk through walls' glitch

* release 0.3.5
	- added Japanese in-game texts
	- added support for localized .TBN (PC-CD)

* release 0.3.4
	- added screenshot for SDL2
	- added support for external graphics scalers (xbrz, scale2x)
	- fixed keypress detection for fullscreen/windowed

* release 0.3.3
	- added configuration for disabling .SEQ playback
	- fixed some Amiga palette glitches
	- fixed protection screen for Amiga

* release 0.3.2